--- a/wp-content/themes/boombit-conf/style.css
+++ b/wp-content/themes/boombit-conf/style.css
@@ -1,5 +1,5 @@
 /*
- * Theme Name: My Timber Starter Theme
- * Description: Starter Theme to use with Timber
- * Author: Upstatement and YOU!
+ * Theme Name: Boombit project
+ * Description: Theme based in timber
+ * Author: Upstatement and Juan M Espina!
 */
