--- a/wp-content/themes/boombit-conf/templates/base.twig
+++ b/wp-content/themes/boombit-conf/templates/base.twig
@@ -2,25 +2,18 @@
 
 {% include 'html-header.twig' %}
 	{% block head %}
+
 	{% endblock %}
 	</head>
 {% endblock %}
 
-	<body class="{{body_class}}" data-template="base.twig">
+	<body class="bg-primary {{body_class}} container-fluid" data-template="base.twig">
 		<a class="skip-link screen-reader-text" href="#content">{{ _e( 'Skip to content') }}</a>
 		<header class="header" >
 			{% block header %}
-				<div class="wrapper">
-					<h1 class="hdr-logo" role="banner">
-						<a class="hdr-logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
-					</h1>
-					<nav id="nav-main" class="nav-main" role="navigation">
-						{% include "menu.twig" with {'items': menu.get_items} %}
-					</nav><!-- #nav -->
-				</div>
+				{% include 'navbar.twig' %}
 			{% endblock %}
 		</header>
-
 		<section id="content" role="main" class="content-wrapper">
 			{% if title %}<h1>{{title}}</h1>{% endif %}
 			<div class="wrapper {{sidebar_class}}">
@@ -36,10 +29,7 @@
 		</section>
 
 		{% block footer %}
-			<footer id="footer">
 				{% include 'footer.twig' %}
-			</footer>
-			{{ function('wp_footer') }}
 		{% endblock %}
 	</body>
 </html>
