--- a/wp-content/themes/boombit-conf/templates/footer.twig
+++ b/wp-content/themes/boombit-conf/templates/footer.twig
@@ -1,1 +1,16 @@
+<footer id="footer" class="container">
+    <section class="row">
+        <div class="col-xs-6 col-xl-3">
+            <img src="https://boombit.agency/wp-content/uploads/2021/08/boombit-logo-light.svg" class="footer-logo" alt="Boombit">
+        </div>
+        <div class="col-xs-6 col-xl-3">
+        </div>
+        <div class="col-xs-6 col-xl-3">
+        </div>
+        <div class="col-xs-6 col-xl-3">
+        </div>
+    </section>
 Copyright {{"now"|date('Y')}}
+</footer>
+{{ function('wp_footer') }}
+
