--- a/wp-content/themes/boombit-conf/templates/menu.twig
+++ b/wp-content/themes/boombit-conf/templates/menu.twig
@@ -1,10 +1,16 @@
 {% if menu %}
-	<ul>
-	{% for item in items %}
-		<li class="{{ item.classes | join(' ') }}">
-			<a target="{{ item.target }}" href="{{ item.link }}">{{ item.title }}</a>
-			{% include "menu.twig" with {'items': item.children} %}
-		</li>
-	{% endfor %}
-	</ul>
+    	<ul class="navbar-nav justify-content-end">
+		{% for item in items %}
+			<li class="nav-item {{ item.children ? 'dropdown'}}">
+				<a id="menu-{{item.object_id}}" class="{{ item.children ? 'dropdown-toggle'}} nav-link {{ item.current == 1 ? "active" }}" {{ item.children ? 'data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"'}}  {{ item.current == 1 ? "aria-current='page'" }} target="{{ item.target }}" href="{{ item.link }}">{{ item.title }}</a>
+				{% if item.children %}
+						<div class="dropdown-menu" aria-labelledby="menu-{{item.object_id}}">
+							{% for child in item.children %}							
+	          					<a class="dropdown-item" target="{{ child.target }}" href="{{ child.link }}">{{ child.title }}</a>
+							{% endfor %}
+        				</div>
+				{% endif %}
+			</li>
+		{% endfor %}
+		</ul>
 {% endif %}
