--- a/wp-content/themes/boombit-conf/assets/css/style.sass
+++ b/wp-content/themes/boombit-conf/assets/css/style.sass
@@ -1,1 +1,21 @@
+$primary: #9b51e0
+$secondary: #454fad
+$font-family-sans-serif: 'DM Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
+
 @import "~bootstrap/scss/bootstrap"
+@import url('https://fonts.cdnfonts.com/css/dm-sans')
+
+
+*
+    font-family: $font-family-sans-serif
+
+.header
+    min-height:60px
+    .logo
+        min-height:20px
+
+.footer-logo
+    height:40px
+
+.navbar-transition
+    transition: transform 0.3s ease 0s, background-color 0.3s ease 0s, opacity 0.3s ease 0s, box-shadow 0.3s ease 0s, border-color 0.3s ease 0s, margin 0.25s ease-out 0s, backdrop-filter 0.25s ease 0s
