--- a/wp-content/themes/boombit-conf/templates/base.twig
+++ b/wp-content/themes/boombit-conf/templates/base.twig
@@ -7,14 +7,14 @@
 	</head>
 {% endblock %}
 
-	<body class="bg-primary {{body_class}} container-fluid" data-template="base.twig">
+	<body class="bg-primary {{body_class}} container-fluid m-0 p-0" data-template="base.twig">
 		<a class="skip-link screen-reader-text" href="#content">{{ _e( 'Skip to content') }}</a>
 		<header class="header" >
 			{% block header %}
 				{% include 'navbar.twig' %}
 			{% endblock %}
 		</header>
-		<section id="content" role="main" class="content-wrapper">
+		<section id="content" role="main" class="content-wrapper container-fluid">
 			{% if title %}<h1>{{title}}</h1>{% endif %}
 			<div class="wrapper {{sidebar_class}}">
 				{% block content %}
