Single conference template

--- a/wp-content/themes/boombit-conf/templates/base.twig
+++ b/wp-content/themes/boombit-conf/templates/base.twig
@@ -14,7 +14,7 @@
 				{% include 'navbar.twig' %}
 			{% endblock %}
 		</header>
-		<section id="content" role="main" class="content-wrapper container-fluid">
+		<section id="content" role="main" class="content-wrapper container-fluid m-0 p-0">
 			{% if title %}<h1>{{title}}</h1>{% endif %}
 			<div class="wrapper {{sidebar_class}}">
 				{% block content %}
