--- a/wp-content/themes/boombit-conf/assets/css/style.sass
+++ b/wp-content/themes/boombit-conf/assets/css/style.sass
@@ -1,21 +1,47 @@
-$primary: #9b51e0
+$primary: #f4e3f9
+$primary-dark: #9b51e0
+$primary-darker: #2a0f2e
+$primary-light: #eacef9
 $secondary: #454fad
 $font-family-sans-serif: 'DM Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
+$bootstrap-icons-font-src: url("~bootstrap-icons/font/fonts/bootstrap-icons.woff2") format("woff2"), url("~bootstrap-icons/font/fonts/bootstrap-icons.woff") format("woff")
 
 @import "~bootstrap/scss/bootstrap"
 @import url('https://fonts.cdnfonts.com/css/dm-sans')
+@import "~bootstrap-icons/font/bootstrap-icons.scss"
 
 
 *
     font-family: $font-family-sans-serif
 
 .header
-    min-height:60px
     .logo
         min-height:20px
+
+.hero
+    height:500px
+
+.speaker-photo
+    width:200px
+    border-radius: 50%
+
+.overlay-dark
+    background-color: rgba(black, 0.4)
 
 .footer-logo
     height:40px
 
 .navbar-transition
     transition: transform 0.3s ease 0s, background-color 0.3s ease 0s, opacity 0.3s ease 0s, box-shadow 0.3s ease 0s, border-color 0.3s ease 0s, margin 0.25s ease-out 0s, backdrop-filter 0.25s ease 0s
+
+.border-primary-dark
+    border-color: $primary-dark
+    
+.bg-primary-dark
+    background-color:$primary-dark
+
+.text-primary-dark
+    color:$primary-dark
+
+.text-primary-darker
+    color:$primary-darker
