--- a/wp-content/themes/boombit-conf/templates/single-conference.twig
+++ b/wp-content/themes/boombit-conf/templates/single-conference.twig
@@ -1,42 +1,102 @@
 {% extends 'base.twig' %}
-	{% block header %}
-		{% include 'navbar.twig' %}
-        <!-- Hero -->
-        <section class="hero text-white" style="
-            background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');">
-            <div class="row justify-content-around align-items-center h-100 overlay-dark">
-                <div class="col-12 text-center">
-                    <h1>{{ post.title }}</h1>
-                    {# <a class="btn btn-primary btn-lg" href="#!" role="button">Sign up!</a> #}
-                </div>
-                <div class="col-xl-12 d-flex justify-content-around align-items-center ">
-                    {# <div class="col"> #}
-                        <h4>Date: {{ post.date }}</h4>
-                    {# </div>
-                    <div class="col"> #}
-                        <h4><i class="bi bi-geo-alt"></i> {{ post.location }}</h4>
-                    {# </div> #}
+
+{% block header %}
+    {% include 'navbar.twig' %}
+    <!-- Hero -->
+    <section class="hero text-white" style="
+        background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');">
+        <div class="row justify-content-around align-items-center h-100 overlay-dark">
+            <div class="col-12 text-center">
+                <h1>{{ post.title }}</h1>
+            </div>
+            <div class="col-12 d-flex justify-content-around align-items-center ">
+                <h4><i class="bi bi-calendar-date"></i> {{ post.date }}</h4>
+                <a class="btn btn-primary btn-md" href="#!" role="button">Sign up!</a>
+                <h4><i class="bi bi-geo-alt"></i> {{ post.location }}</h4>
+            </div>
+        </div>
+    </section>
+    <!-- Hero -->
+{% endblock %}
+
+{% block content %}
+    <section class="container-fluid m-0 p-0">
+        <div class="row bg-light p-4 ">
+            <div class="col-xs-12 col-md-6 d-flex align-items-center justify-content-around">
+                <h2 class="text-primary-dark">
+                    About the conference
+                </h2>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <p class="text-primary-darker">
+                    {{post.description}}
+                </p>
+            </div>
+        </div>
+        <div class="row p-4 text-primary-darker">
+            <div class="col-xs-12">
+                <h2>Speakers</h2>
+                <div class="row justify-content-around align-items-center">
+                    {% for speaker in all_speakers %}
+                        <div class="col-xs-3 col-md-2 text-center">
+                            <img src="{{speaker.get_field('photo')}}" class="speaker-photo img-fluid border-primary-dark" alt="{{ speaker.post_title }}">
+                            <h4>{{ speaker.post_title }}</h4>
+                            <div>
+                                {% set terms = speaker.terms('expertise')  %}
+                                {% for term in terms %}
+                                   <span class="badge rounded-pill bg-secondary">{{ term.name }}</span> 
+                                {% endfor %}
+                            </div>
+                        </div>
+                    {% endfor %}
                 </div>
             </div>
-        </section>
-        <!-- Hero -->
-    {% endblock %}
-{% block content %}
-  <article>
-    <p><strong>Description:</strong> {{ post.description }}</p>
-    <p><strong>Location:</strong> {{ post.location }}</p>
-    <p><strong>Date:</strong> {{ post.date|date('F j, Y') }}</p>
-    <h3>Talks</h3>
-    {% for talk in post.get_field('talks') %}
-      <div>
-        <h4>{{ talk.name }}</h4>
-        <p><strong>Time:</strong> {{ talk.time }}</p>
-        <p><strong>Speaker:</strong> {{ talk.speaker.name }}</p>
-        <p><strong>Expertise:</strong> {{ talk.speaker.expertise }}</p>
-        {% if talk.speaker.photo %}
-          <img src="{{ talk.speaker.photo.src }}" alt="{{ talk.speaker.photo.alt }}" />
-        {% endif %}
-      </div>
-    {% endfor %}
-  </article>
+        </div>
+        <div class="row bg-light p-4">
+            <div class="col-xs-12 col-md-6 d-flex align-items-center justify-content-around">
+                <h2 class="text-primary-dark">
+                    The conference agenda
+                </h2>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <table class="table">
+                  <thead>
+                    <tr >
+                      <th scope="col">Hour</th>
+                      <th scope="col">Title</th>
+                      <th scope="col">Speakers</th>
+                      <th scope="col">Topics</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for talk in talks %}
+                        <tr>
+                          <td>{{talk.time}}</td>
+                          <td>{{talk.post_title}}</td>
+                          <td>
+                            <ul>
+                            {% for speaker in talk.speakers %}
+                               <li> {{speaker.post_title}}</li>
+                            {% endfor %}
+                            </ul>
+                          </td>
+                          <td>{{talk.terms('topic')| join(', ') }}</td>
+                        </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+            </div>
+        </div>
+            <div class="row p-4 text-primary-darker">
+                <div class="row justify-content-around align-items-center">
+                    <div class="col-xs-12 col-md-6">
+                        <h2>Sign up! </h2>
+                        <p> Don't miss out this opportunity to learn about new topics with the best speakers in the industry!</p>
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        {{ function('do_shortcode', '[contact-form-7 id="63" title="Conference submission"]') }}
+                    </div>
+                </div>
+            </div>        
+    </section>
 {% endblock %}
