Test speakers photos

--- a/wp-content/themes/boombit-conf/assets/css/style.sass
+++ b/wp-content/themes/boombit-conf/assets/css/style.sass
@@ -1,5 +1,5 @@
 $primary: #f4e3f9
-$primary-dark: #9b51e0
+$primary-dark: #561d5e
 $primary-darker: #2a0f2e
 $primary-light: #eacef9
 $secondary: #454fad
@@ -13,7 +13,7 @@ $bootstrap-icons-font-src: url("~bootstrap-icons/font/fonts/bootstrap-icons.woff
 
 *
     font-family: $font-family-sans-serif
-
+    
 .header
     .logo
         min-height:20px
@@ -28,15 +28,17 @@ $bootstrap-icons-font-src: url("~bootstrap-icons/font/fonts/bootstrap-icons.woff
 .overlay-dark
     background-color: rgba(black, 0.4)
 
-.footer-logo
-    height:40px
+.footer
+    background-color:$primary-dark
+    .footer-logo
+        height:40px
 
 .navbar-transition
     transition: transform 0.3s ease 0s, background-color 0.3s ease 0s, opacity 0.3s ease 0s, box-shadow 0.3s ease 0s, border-color 0.3s ease 0s, margin 0.25s ease-out 0s, backdrop-filter 0.25s ease 0s
 
 .border-primary-dark
     border-color: $primary-dark
-    
+
 .bg-primary-dark
     background-color:$primary-dark
 
