--- a/wp-content/themes/boombit-conf/templates/single-conference.twig
+++ b/wp-content/themes/boombit-conf/templates/single-conference.twig
@@ -3,15 +3,15 @@
 {% block header %}
     {% include 'navbar.twig' %}
     <!-- Hero -->
-    <section class="hero text-white" style="
+    <section class="hero text-white container-fluid" style="
         background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');">
         <div class="row justify-content-around align-items-center h-100 overlay-dark">
-            <div class="col-12 text-center">
+            <div class="col-12 text-center text-capitalize">
                 <h1>{{ post.title }}</h1>
             </div>
             <div class="col-12 d-flex justify-content-around align-items-center ">
-                <h4><i class="bi bi-calendar-date"></i> {{ post.date }}</h4>
-                <a class="btn btn-primary btn-md" href="#!" role="button">Sign up!</a>
+                <h4><i class="bi bi-calendar-date"></i> {{ post.get_field('start_date')|date("F j, Y")|escape('wp_kses_post') }}</h4>
+                <a class="btn btn-primary btn-md" href="#contact-us" role="button">Sign up!</a>
                 <h4><i class="bi bi-geo-alt"></i> {{ post.location }}</h4>
             </div>
         </div>
@@ -33,14 +33,14 @@
                 </p>
             </div>
         </div>
-        <div class="row p-4 text-primary-darker">
+        <div class="row text-primary-darker p-4">
             <div class="col-xs-12">
-                <h2>Speakers</h2>
+                <h2>Meet the speakers</h2>
                 <div class="row justify-content-around align-items-center">
                     {% for speaker in all_speakers %}
                         <div class="col-xs-3 col-md-2 text-center">
                             <img src="{{speaker.get_field('photo')}}" class="speaker-photo img-fluid border-primary-dark" alt="{{ speaker.post_title }}">
-                            <h4>{{ speaker.post_title }}</h4>
+                            <h4 class="text-capitalize">{{ speaker.post_title }}</h4>
                             <div>
                                 {% set terms = speaker.terms('expertise')  %}
                                 {% for term in terms %}
@@ -87,16 +87,14 @@
                 </table>
             </div>
         </div>
-            <div class="row p-4 text-primary-darker">
-                <div class="row justify-content-around align-items-center">
-                    <div class="col-xs-12 col-md-6">
-                        <h2>Sign up! </h2>
-                        <p> Don't miss out this opportunity to learn about new topics with the best speakers in the industry!</p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        {{ function('do_shortcode', '[contact-form-7 id="63" title="Conference submission"]') }}
-                    </div>
-                </div>
-            </div>        
+        <div class="row p-4 text-primary-darker justify-content-around align-items-center" id="contact-us">
+            <div class="col-xs-12 col-md-6">
+                <h2>Sign up! </h2>
+                <p> Don't miss out this opportunity to learn about new topics with the best speakers in the industry!</p>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                {{ function('do_shortcode', '[contact-form-7 id="63" title="Conference submission"]') }}
+            </div>
+        </div>                  
     </section>
 {% endblock %}
