--- a/wp-content/themes/boombit-conf/templates/single-conference.twig
+++ b/wp-content/themes/boombit-conf/templates/single-conference.twig
@@ -22,23 +22,24 @@
 {% block content %}
     <section class="container-fluid m-0 p-0">
         <div class="row bg-light p-4 ">
-            <div class="col-xs-12 col-md-6 d-flex align-items-center justify-content-around">
+            <div class="col-xs-12 col-md-6 p-2 d-flex align-items-center justify-content-around">
                 <h2 class="text-primary-dark">
                     About the conference
                 </h2>
             </div>
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-6 p-2">
                 <p class="text-primary-darker">
                     {{post.description}}
                 </p>
             </div>
         </div>
         <div class="row text-primary-darker p-4">
-            <div class="col-xs-12">
+            <div class="col-xs-12 p-2 text-center">
+                {% if all_speakers %}
                 <h2>Meet the speakers</h2>
                 <div class="row justify-content-around align-items-center">
                     {% for speaker in all_speakers %}
-                        <div class="col-xs-3 col-md-2 text-center">
+                        <div class="col-xs-3 mt-2 col-md-2 text-center">
                             <img src="{{speaker.get_field('photo')}}" class="speaker-photo img-fluid border-primary-dark" alt="{{ speaker.post_title }}">
                             <h4 class="text-capitalize">{{ speaker.post_title }}</h4>
                             <div>
@@ -50,15 +51,19 @@
                         </div>
                     {% endfor %}
                 </div>
+                {% else %}
+                    <h4>Speakers to be announced.</h4>
+                {% endif %}
             </div>
         </div>
         <div class="row bg-light p-4">
-            <div class="col-xs-12 col-md-6 d-flex align-items-center justify-content-around">
+            <div class="col-xs-12 col-md-6 p-2 d-flex align-items-center justify-content-around">
                 <h2 class="text-primary-dark">
                     The conference agenda
                 </h2>
             </div>
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-6 text-center p-2">
+                {% if talks %}
                 <table class="table">
                   <thead>
                     <tr >
@@ -85,14 +90,15 @@
                     {% endfor %}
                   </tbody>
                 </table>
+                {% else %}
+                    <h4>Talks will be announced soon.</h4>
+                {% endif %}
             </div>
         </div>
-        <div class="row p-4 text-primary-darker justify-content-around align-items-center" id="contact-us">
-            <div class="col-xs-12 col-md-6">
-                <h2>Sign up! </h2>
+        <div class="row p-4 text-primary-darker justify-content-around align-items-center text-center" id="contact-us">
+            <div class="col-xs-12 col-md-6 p-2">
+                 <h2>Sign up! </h2>
                 <p> Don't miss out this opportunity to learn about new topics with the best speakers in the industry!</p>
-            </div>
-            <div class="col-xs-12 col-md-6">
                 {{ function('do_shortcode', '[contact-form-7 id="63" title="Conference submission"]') }}
             </div>
         </div>                  
