--- a/wp-content/themes/boombit-conf/assets/css/style.sass
+++ b/wp-content/themes/boombit-conf/assets/css/style.sass
@@ -10,7 +10,6 @@ $bootstrap-icons-font-src: url("~bootstrap-icons/font/fonts/bootstrap-icons.woff
 @import url('https://fonts.cdnfonts.com/css/dm-sans')
 @import "~bootstrap-icons/font/bootstrap-icons.scss"
 
-
 *
     font-family: $font-family-sans-serif
     
@@ -20,6 +19,10 @@ $bootstrap-icons-font-src: url("~bootstrap-icons/font/fonts/bootstrap-icons.woff
 
 .hero
     height:500px
+
+.conference-banner
+    background-repeat: no-repeat
+    background-size: cover
 
 .speaker-photo
     width:200px
@@ -41,6 +44,9 @@ $bootstrap-icons-font-src: url("~bootstrap-icons/font/fonts/bootstrap-icons.woff
 
 .bg-primary-dark
     background-color:$primary-dark
+
+.bg-primary-darker
+    background-color:$primary-darker
 
 .text-primary-dark
     color:$primary-dark
