--- a/wp-content/themes/boombit-conf/templates/footer.twig
+++ b/wp-content/themes/boombit-conf/templates/footer.twig
@@ -1,6 +1,6 @@
 <footer id="footer" class="footer pt-4 text-white">
     <section class="container">
-        <div class="row justify-content-center align-items-center">
+        <div class="row justify-content-center align-items-center text-center ">
             <div class="col-xs-6 col-xl-4 row justify-content-center align-items-center">
                 <div class="col-12 d-flex justify-content-center align-items-center">
                     <img src="https://boombit.agency/wp-content/uploads/2021/08/boombit-logo-light.svg" class="footer-logo" alt="Boombit">
