--- a/wp-content/themes/boombit-conf/assets/css/style.sass
+++ b/wp-content/themes/boombit-conf/assets/css/style.sass
@@ -20,6 +20,9 @@ $bootstrap-icons-font-src: url("~bootstrap-icons/font/fonts/bootstrap-icons.woff
 .hero
     height:500px
 
+.article-h1
+    display: none
+    
 .conference-banner
     background-repeat: no-repeat
     background-size: cover
