--- a/wp-content/themes/boombit-conf/templates/single-conference.twig
+++ b/wp-content/themes/boombit-conf/templates/single-conference.twig
@@ -3,6 +3,7 @@
 {% block header %}
     {% include 'navbar.twig' %}
     <!-- Hero -->
+    {% block hero %}
     <section class="hero text-white container-fluid conference-banner" style="background-image:  url('{% if post.get_field('banner') %}{{post.get_field('banner')}}{% else %}https://mdbcdn.b-cdn.net/img/new/slides/041.webp{% endif %}'); ">
         <div class="row justify-content-around align-items-center h-100 overlay-dark">
             <div class="col-12 text-center text-capitalize">
@@ -16,6 +17,7 @@
         </div>
     </section>
     <!-- Hero -->
+    {% endblock %}
 {% endblock %}
 
 {% block content %}
