--- a/wp-content/themes/boombit-conf/templates/single-conference.twig
+++ b/wp-content/themes/boombit-conf/templates/single-conference.twig
@@ -9,10 +9,16 @@
             <div class="col-12 text-center text-capitalize">
                 <h1>{{ post.title }}</h1>
             </div>
-            <div class="col-12 d-flex justify-content-around align-items-center ">
-                <h4><i class="bi bi-calendar-date"></i> {{ post.get_field('start_date')|date("F j, Y")|escape('wp_kses_post') }}</h4>
-                <a class="btn btn-primary btn-md" href="#contact-us" role="button">Sign up!</a>
-                <h4><i class="bi bi-geo-alt"></i> {{ post.location }}</h4>
+            <div class="col-12 row d-flex justify-content-around align-items-center">
+                <div class="col-sm-6 col-md-3 mt-2 d-flex justify-content-around align-items-center">
+                    <h4><i class="bi bi-calendar-date"></i> {{ post.get_field('start_date')|date("F j, Y")|escape('wp_kses_post') }}</h4>
+                </div>
+                <div class="col-sm-6 col-md-3 mt-2 d-flex justify-content-around align-items-center">
+                    <a class="btn btn-primary btn-md" href="#contact-us" role="button">Sign up!</a>
+                </div>
+                <div class="col-sm-6 col-md-3 mt-2 d-flex justify-content-around align-items-center">    
+                    <h4><i class="bi bi-geo-alt"></i> {{ post.location }}</h4>
+                </div>
             </div>
         </div>
     </section>
@@ -40,7 +46,7 @@
                 <h2>Meet the speakers</h2>
                 <div class="row justify-content-around align-items-center">
                     {% for speaker in all_speakers %}
-                        <div class="col-xs-3 mt-2 col-md-2 text-center">
+                        <div class="col-sm-6 mt-4 col-md-2 text-center">
                             <img src="{{speaker.get_field('photo')}}" class="speaker-photo img-fluid border-primary-dark" alt="{{ speaker.post_title }}">
                             <h4 class="text-capitalize">{{ speaker.post_title }}</h4>
                             <div>
