Fix navbar on mobile not showing

--- a/wp-content/themes/boombit-conf/templates/navbar.twig
+++ b/wp-content/themes/boombit-conf/templates/navbar.twig
@@ -4,7 +4,7 @@
 			<a class="navbar-brand" href="{{site.url}}" rel="home">
 			    <img src="https://boombit.agency/wp-content/uploads/2021/08/boombit-logo-light.svg" class="d-inline-block align-text-top logo" alt="Boombit">
 			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
